fix: image spacing

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -6,5 +6,6 @@
 .aboutimg {
   width: 100%;
   border: 1px solid white;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
